--- a/k8s/11.md
+++ b/k8s/11.md
@@ -20,7 +20,9 @@ type: Opaque
 
 ## Decoded Secret
 
-`uksus`
+```
+uksus
+```
 
 ## Pod List
 
@@ -35,5 +37,7 @@ moscow-time-app-744b8f85b-pglz8   1/1     Running   0          87s
 
 The output of `kubectl exec moscow-time-app-744b8f85b-pglz8 -- printenv | grep MY_CATS_NAME`:
 
-`MY_CATS_NAME=uksus`
+```
+MY_CATS_NAME=uksus
+```
 
