lab 14 complete (6 poitns)

--- a/monitoring/14.md
+++ b/monitoring/14.md
@@ -148,3 +148,32 @@ Highest - `kube-apiserver-minikube` from `kube-system` namespace.
 Lowest - `kube-prometheus-stack-prometheus-node-exporter-d5php` from `monitoring` namespace.
 
 ![CPU pods](./screenshots/CPUpods.png)
+
+### c) Monitor node memory usage in percentage and megabytes.
+Memory usage - 45% / 6.5 GiB
+
+![Node memory usage](./screenshots/nodememoryusage.png)
+
+
+### d) Count the number of pods and containers managed by the Kubelet service.
+Pods - 15, Containers - 39
+
+![Count pods](./screenshots/countpods.png)
+
+### e) Evaluate network usage of Pods in the default namespace.
+
+Download speed - 37kB/s
+
+Upload speed - 1.21MB/s
+
+![Network](./screenshots/network.png)
+
+### f) Determine the number of active alerts; also check the Web UI with minikube service monitoring-kube-prometheus-alertmanager.
+
+8 total alerts
+
+![Alerts](./screenshots/alerts.png)
+
+Web UI
+
+![Alert web](./screenshots/alertweb.png)
